@@ -55,7 +55,6 @@ enum
   OPT_PRINT,
   OPT_PRINT_AIGER,
   OPT_REAL,
-  OPT_INCREMENTAL,
   OPT_VERBOSE
 };
 
@@ -71,12 +70,10 @@ static const argp_option options[] =
       " propositions", 0},
     /**************************************************/
     { nullptr, 0, nullptr, 0, "Fine tuning:", 10 },
-    { "algo", OPT_ALGO, "qp|rec", 0,
-      "choose the parity game algorithm, valid ones are rec (Zielonka's"
-      " recursive algorithm, default) and qp (Calude et al.'s quasi-polynomial"
-      " time algorithm)", 0 },
-    { "incr", OPT_INCREMENTAL, nullptr, 0,
-      "use the incremental algorithm", 0 },
+    { "algo", OPT_ALGO, "incr|detsplit|splitdet", 0,
+      "choose the algorithm for synthesis: incr (incremental determinization),"
+      "detsplit (determinize then split) or splitdet (split then determinize)."
+      "default is splitdet.", 0},
     /**************************************************/
     { nullptr, 0, nullptr, 0, "Output options:", 20 },
     { "print-pg", OPT_PRINT, nullptr, 0,
@@ -114,29 +111,30 @@ static std::vector<std::string> output_aps;
 bool opt_print_pg(false);
 bool opt_real(false);
 bool opt_print_aiger(false);
-bool opt_incremental(false);
 
-// FIXME rename options to choose the algorithm
 enum solver
 {
-  QP,
-  REC
+  INCR,
+  DET_SPLIT,
+  SPLIT_DET
 };
 
 static char const *const solver_args[] =
 {
-  "qp", "quasi-polynomial",
-  "recursive",
+  "incr",
+  "detsplit", "ds",
+  "splitdet", "sd",
   nullptr
 };
 static solver const solver_types[] =
 {
-  QP, QP,
-  REC,
+  INCR,
+  DET_SPLIT, DET_SPLIT,
+  SPLIT_DET, SPLIT_DET
 };
 ARGMATCH_VERIFY(solver_args, solver_types);
 
-static solver opt_solver = REC;
+static solver opt_solver = SPLIT_DET;
 static bool verbose = false;
 
 namespace
@@ -191,7 +189,8 @@ namespace
   {
     // if the input automaton is deterministic, degeneralize it to be sure to
     // end up with a parity automaton
-    auto dpa = spot::tgba_determinize(spot::degeneralize_tba(split));
+    auto dpa = spot::tgba_determinize(spot::degeneralize_tba(split),
+                                      false, true, true, false);
     dpa->merge_edges();
     if (opt_print_pg)
       dpa = spot::sbacc(dpa);
@@ -297,13 +296,6 @@ namespace
           all_outputs &= bdd_ithvar(v);
         }
 
-      auto split = split_2step(aut, all_inputs);
-      if (verbose)
-        {
-          std::cerr << "split inputs and outputs done" << std::endl;
-          std::cerr << "automaton has " << split->num_states() << " states"
-            << std::endl;
-        }
 
       //split = spot::simulation(split);
       //if (verbose)
@@ -312,8 +304,15 @@ namespace
       //      << std::endl;
       //  }
 
-      if (opt_incremental)
+      if (opt_solver == INCR)
         {
+          auto split = split_2step(aut, all_inputs);
+          if (verbose)
+            {
+              std::cerr << "split inputs and outputs done" << std::endl;
+              std::cerr << "automaton has " << split->num_states() << " states"
+                << std::endl;
+            }
           // Degeneralize the automaton, so that it can be determinized
           auto degen = spot::degeneralize_tba(split);
           if (verbose)
@@ -538,9 +537,40 @@ namespace
         }
       else
         {
-          auto dpa = to_dpa(split);
-          if (verbose)
-            std::cerr << "determinization done" << std::endl;
+          spot::twa_graph_ptr dpa = nullptr;
+          if (opt_solver == DET_SPLIT)
+            {
+              auto tmp = to_dpa(aut);
+              if (verbose)
+                std::cerr << "determinization done\n"
+                  << "dpa has " << tmp->num_states() << " states" << std::endl;
+              tmp->merge_states();
+              if (verbose)
+                std::cerr << "simulation done\n"
+                  << "dpa has " << tmp->num_states() << " states" << std::endl;
+              dpa = split_2step(tmp, all_inputs);
+              if (verbose)
+                std::cerr << "split inputs and outputs done\n"
+                  << "automaton has " << dpa->num_states() << " states"
+                  << std::endl;
+              spot::colorize_parity_here(dpa, true);
+            }
+          else
+            {
+              auto split = split_2step(aut, all_inputs);
+              if (verbose)
+                std::cerr << "split inputs and outputs done\n"
+                  << "automaton has " << split->num_states() << " states"
+                  << std::endl;
+              dpa = to_dpa(split);
+              if (verbose)
+                std::cerr << "determinization done\n"
+                  << "dpa has " << dpa->num_states() << " states" << std::endl;
+              dpa->merge_states();
+              if (verbose)
+                std::cerr << "simulation done\n"
+                  << "dpa has " << dpa->num_states() << " states" << std::endl;
+            }
           auto owner = complete_env(dpa);
           auto pg = spot::parity_game(dpa, owner);
           if (verbose)
@@ -552,58 +582,33 @@ namespace
               pg.print(std::cout);
               return 0;
             }
-          switch (opt_solver)
-            {
-              case REC:
-                {
-                  spot::parity_game::strategy_t strategy[2];
-                  spot::parity_game::region_t winning_region[2];
-                  pg.solve(winning_region, strategy);
-                  if (winning_region[1].count(pg.get_init_state_number()))
-                    {
-                      std::cout << "REALIZABLE\n";
-                      if (!opt_real)
-                        {
-                          auto strat_aut =
-                            strat_to_aut(pg, strategy[1], dpa, all_outputs);
 
-                          // output the winning strategy
-                          if (opt_print_aiger)
-                            spot::print_aiger(std::cout, strat_aut);
-                          else
-                            {
-                              automaton_printer printer;
-                              printer.print(strat_aut, timer);
-                            }
-                        }
-                      return 0;
-                    }
+          spot::parity_game::strategy_t strategy[2];
+          spot::parity_game::region_t winning_region[2];
+          pg.solve(winning_region, strategy);
+          if (winning_region[1].count(pg.get_init_state_number()))
+            {
+              std::cout << "REALIZABLE\n";
+              if (!opt_real)
+                {
+                  auto strat_aut =
+                    strat_to_aut(pg, strategy[1], dpa, all_outputs);
+
+                  // output the winning strategy
+                  if (opt_print_aiger)
+                    spot::print_aiger(std::cout, strat_aut);
                   else
                     {
-                      std::cout << "UNREALIZABLE\n";
-                      return 1;
+                      automaton_printer printer;
+                      printer.print(strat_aut, timer);
                     }
                 }
-              case QP:
-                if (!opt_real)
-                  {
-                    std::cout << "The quasi-polynomial time algorithm does not"
-                      " implement synthesis yet, use --realizability\n";
-                    return 2;
-                  }
-                else if (pg.solve_qp())
-                  {
-                    std::cout << "REALIZABLE\n";
-                    return 0;
-                  }
-                else
-                  {
-                    std::cout << "UNREALIZABLE\n";
-                    return 1;
-                  }
-              default:
-                SPOT_UNREACHABLE();
-                return 2;
+              return 0;
+            }
+          else
+            {
+              std::cout << "UNREALIZABLE\n";
+              return 1;
             }
         }
     }
@@ -651,9 +656,6 @@ parse_opt(int key, char* arg, struct argp_state*)
       break;
     case OPT_VERBOSE:
       verbose = true;
-      break;
-    case OPT_INCREMENTAL:
-      opt_incremental = true;
       break;
     }
   return 0;
