@@ -110,7 +110,11 @@ diff out exp
 cat >exp <<EOF
 translating formula done
 split inputs and outputs done
+automaton has 9 states
 determinization done
+dpa has 14 states
+simulation done
+dpa has 14 states
 parity game built
 EOF
 ltlsynt --ins='a' --outs='b' -f 'GFa <-> GFb' --verbose --realizability 2> out
@@ -199,11 +203,11 @@ for i in 0 1 7 8 9 12 13; do
   OUT=$(eval echo \$OUT$i)
   EXP=$(eval echo \$EXP$i)
   test $EXP = $(ltlsynt -f "$F" --ins="$IN" --outs="$OUT" --realizability \
-  --algo=rec)
+  --algo=ds)
   test $EXP = $(ltlsynt -f "$F" --ins="$IN" --outs="$OUT" --realizability \
-  --algo=qp)
+  --algo=sd)
   test $EXP = $(ltlsynt -f "$F" --ins="$IN" --outs="$OUT" --realizability \
-  --incr)
+  --algo=incr)
 done
 
 for i in 2 3 4 5 6 10 11; do
@@ -215,7 +219,17 @@ for i in 2 3 4 5 6 10 11; do
   ltl2tgba -f "!($F)" > negf_aut$i
 
   # test ltlsynt
-  ltlsynt -f "$F" --ins="$IN" --outs="$OUT" > out$i || true
+  ltlsynt -f "$F" --ins="$IN" --outs="$OUT" --algo=ds > out$i || true
+  REAL=`head -1 out$i`
+  test $REAL = $EXP
+  tail -n +2 out$i > res$i
+  # check that the L(strategy) is included in L(F)
+  autfilt -q -v --intersect=negf_aut$i res$i
+  # check that all environment actions are possible
+  autfilt --remove-ap="$OUT" res$i | autfilt --dualize | autfilt --is-empty -q
+
+  # test ltlsynt
+  ltlsynt -f "$F" --ins="$IN" --outs="$OUT" --algo=sd > out$i || true
   REAL=`head -1 out$i`
   test $REAL = $EXP
   tail -n +2 out$i > res$i
@@ -225,7 +239,7 @@ for i in 2 3 4 5 6 10 11; do
   autfilt --remove-ap="$OUT" res$i | autfilt --dualize | autfilt --is-empty -q
 
   # test ltlsynt with incremental resolution
-  ltlsynt --incr -f "$F" --ins="$IN" --outs="$OUT" > out$i || true
+  ltlsynt -f "$F" --ins="$IN" --outs="$OUT" --algo=incr > out$i || true
   REAL=`head -1 out$i`
   test $REAL = $EXP
   tail -n +2 out$i > res$i
