@@ -37,6 +37,18 @@ New in spot 2.5.3.dev  (not yet released)
   - genltl --ms-example can now take a two-range argument,
     (as --sejk-f above).
 
+  - ltlsynt now has three algorithms for synthesis:
+    --algo=sd     is the historical one. The automaton of the formula
+                  is split to separate inputs and outputs, then
+                  determinized.
+    --algo=incr   same as above, except that the determinization is
+                  done incrementally.
+    --algo=sd     the automaton of the formula is determinized, then
+                  split to separate inputs and outputs.
+    In all three cases, the obtained parity game is solved using
+    Zielonka algorithm. Calude's quasi-polynomial time algorithm has
+    been dropped as it was not used.
+
   Build:
 
   - ./configure --enable-max-accsets=N let you specify a maximum
